# paramak

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  DockerfileDependencies  LICENSE  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  azure-pipelines.yml  build.sh  conda_build.sh  conda_build_config.yaml  environment.yml  environment_dev.yml  gui.Dockerfile  index.html  meta.yaml  optional-requirements.txt  parametric_cooling_channels_curved.py  parametric_cooling_channels_curved_inner_outer.py  parametric_cooling_channels_mixed.py  parametric_cooling_channels_straight.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements-test.txt  requirements.txt  run_tests.sh  run_tests_geometry.sh  selected_tests.sh  setup.cfg  setup.py  test.py
.circleci/: config.yml
.devcontainer/: gui.Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: anaconda-build.sh  anaconda-publish-develop.yml  anaconda-publish.yml  anaconda_publish.yml  auto_format_pep8.yml  auto_lint.yml  autopep8.yml  black.yml  ci.yml  ci_with_docker_build.yml  ci_with_install.yml  ci_with_install_cq_master.yml  conda-build-test.yml  docker_ci.yml  docker_ci_develop.yml  docker_ci_develop_new.yml  (+14 more)
0.9.10/: .buildinfo  examples.html  examples_vis.html  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js
0.9.11/: .buildinfo  examples.html  examples_vis.html  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js
0.9.2/: genindex.html  objects.inv  search.html
0.9.3/: .buildinfo  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js  usage.html
0.9.4/: .buildinfo  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js  usage.html  usage_spherical_tokamak.html  usage_tokamak.html  usage_vis.html
0.9.5/: .buildinfo  examples_spherical_tokamak.html  examples_tokamak.html  examples_vis.html  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js
0.9.8/: .buildinfo  examples.html  examples_spherical_tokamak.html  examples_tokamak.html  examples_vis.html  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js
0.9.9/: .buildinfo  examples.html  examples_vis.html  genindex.html  index.html  install.html  objects.inv  python_api.html  search.html  searchindex.js
conda/: README.md  conda_build_config.yaml  meta.yaml
conda_dev/: conda_build_config.yaml  meta.yaml
conda_develop/: README.md  meta.yaml
dev/: .buildinfo  examples.html  examples_spherical_tokamak.html  examples_tokamak.html  examples_vis.html  genindex.html  index.html  install.html  objects.inv  output.json  python_api.html  search.html  searchindex.js  usage.html  usage_spherical_tokamak.html  usage_tokamak.html  usage_vis.html
docs/: .buildinfo  README.md  conf.py  environment.yml  examples_spherical_tokamak.rst  examples_tokamak.rst  examples_vis.rst  index.rst  install.html  install.rst  make_docs_from_rst.sh  python_api.html  python_api.rst  usage.rst  usage_spherical_tokamak.rst  usage_tokamak.rst  version_switcher.json
documentation/: make_docs_from_source.sh
examples/: divertor_curved.py  make_CAD_from_points.ipynb  make_CAD_from_points.py  make_all_parametric_components.py  make_all_parametric_shapes.py  make_animation.py  make_ball_reactor.py  make_blanket_from_parameters.py  make_blanket_from_points.py  make_can_reactor_from_parameters.py  make_can_reactor_from_points.py  make_collarge.py  make_dagmc_h5m_geometry.py  make_parametric_ball_reactor.py  make_plasma_dependant_center_column_shield.py  make_plasmas.py  making_simple_paramak_neutronics_model.py  naming.py  plasma.py  run_all_examples.sh  spherical_tokamak_from_plasma_animation.py  spherical_tokamak_from_plasma_minimal.py  spherical_tokamak_from_plasma_with_color.py  spherical_tokamak_from_plasma_with_divertor.py  spherical_tokamak_from_plasma_with_pf_magnets.py  spherical_tokamak_from_plasma_with_pf_magnets_and_divertors.py  spherical_tokamak_from_plasma_with_tf_magnets.py  spherical_tokamak_minimal.py  tokamak_from_plasma_animation.py  tokamak_from_plasma_minimal.py  tokamak_from_plasma_with_color.py  tokamak_from_plasma_with_divertor.py  tokamak_minimal.py  tokamak_with_pf_magnets.py  tokamak_with_pf_tf_magnets_divertor.py
examples_tests/: test_example_components.py  test_example_reactors.py  test_example_shapes.py  test_examples.py
paramak/: __init__.py  extruded_circle_shape.py  extruded_mixed_shape.py  extruded_spline_shape.py  extruded_straight_shape.py  make_faceteted_neutronics_model.py  neutronics_utils.py  reactor.py  rotate_circle_shape.py  rotate_mixed_shape.py  rotate_spline_shape.py  rotate_straight_shape.py  shape.py  utils.py
stable/: examples.html  index.html  install.html  output.json  searchindex.js  usage.html  usage_spherical_tokamak.html  usage_tokamak.html
tests/: ENDFB-7.1-NNDC_H1.h5  cross_sections.xml  local_test_examples.py  notebook_testing.py  test_BallReactor.py  test_CenterColumnStudyReactor.py  test_ExtrudeCircleShape.py  test_ExtrudeMixedShape.py  test_ExtrudeSplineShape.py  test_ExtrudeStraightShape.py  test_ParametricComponents.py  test_ParametricShapes.py  test_PortCutterRotated.py  test_Reactor.py  test_RotateCircleShape.py  test_RotateMixedShape.py  test_RotateSplineShape.py  test_RotateStraightShape.py  test_Shape.py  test_SubmersionBallReactor.py  test_SubmersionTokamak.py  test_SweepCircleShape.py  test_SweepMixedShape.py  test_SweepSplineShape.py  test_SweepStraightShape.py  test_example_components.py  test_example_neutronics_simulations.py  test_example_reactors.py  test_example_shapes.py  test_examples.py  test_h5m_export.py  test_neutronics_utils.py  test_optional_imports.py  test_reactor.py  test_shape.py  test_utils.py  test_version.py
tests_h5m/: test_reactor_export_h5m.py  test_rotate_straight_shape_export_h5m.py
tests_show/: test_reactor.py  test_shape.py
(+727 files in other folders)
