[metadata]
name = paramak
version = attr: paramak.__version__
author = The Paramak Development Team
author_email = mail@jshimwell.com
description = Create 3D fusion reactor CAD models based on input parameters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/paramak
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/paramak
    Tracker = https://github.com/fusion-energy/paramak/issues

[options]
packages = find:
python_requires= >=3.8
install_requires=
    plotly >= 5.1.0
    scipy >= 1.7.0
    sympy >= 1.8
    numpy >= 1.21.1
    matplotlib >= 3.4.2
    plasmaboundaries >= 0.1.8
    jupyter-client < 7
    jupyter-cadquery >= 3.2.0
    brep_part_finder >= 0.4.1
    brep_to_h5m >= 0.3.1
    setuptools_scm

[options.extras_require]
tests =
    pytest >= 5.4.3
    pytest-cov>=2.12.1
    pytest-runner>=5.3.1
    dagmc_h5m_file_inspector>=0.5.0
docs =
    sphinx >= 4.1.2
    sphinx_rtd_theme
    sphinx_autodoc_typehints
    sphinxcadquery

[flake8]
per-file-ignores = __init__.py:F401
