[metadata]
version = attr: paramak.__version__
author = The Paramak Development Team
author_email = mail@jshimwell.com
long_description = file: README.md
long_description_content_type = text/markdown


[options.extras_require]
tests =
    pytest >= 5.4.3
    pytest-cov>=2.12.1
    pytest-runner>=5.3.1
    dagmc_h5m_file_inspector>=0.5.0
docs =
    sphinx >= 4.1.2
    sphinx_rtd_theme
    sphinx_autodoc_typehints
    sphinxcadquery

[flake8]
per-file-ignores = __init__.py:F401
